2009-08-15  GatoLoko  <GatoLoko@gmail.com>

 * whois.py: refactorizadas algunas lineas, resultando en la funcion espacios()
   para ayudar a formatear la salida del whois.
 * whois.py: gestionados los raws 310, 313 y 316.
 * auxiliar.py: arreglado la docstring de priv_imprime.
 * auxiliar.py: eliminada la funcion prueba() que no tenia utilidad.


2009-06-25  GatoLoko  <GatoLoko@gmail.com>

 * auxiliar.py: modificadas las funciones priv_linea y priv_imprime para
   comportarse de forma mas similar a un privado real.
 * antispam.py: arreglada la funcion antilist para que funcione con los filtros
   de la base de datos.

2009-04-22  GatoLoko  <GatoLoko@gmail.com>

 * gatoscript.conf: agregada seccion para el nuevo modulo AutoSend
 * autosend.py: nuevo modulo para envio automatico de archivos

2009-03-05  GatoLoko  <GatoLoko@gmail.com>

 * sysinfo.py: sustituido el uso de os.popen3 por subprocess.Popen de acuerdo al
   Python Enhacement Proposal 324 (http://www.python.org/dev/peps/pep-0324/).
 * sysinfo.py: aumentado el numero de version al 1.0alpha1
 * ejemplo.py: renombrada una variable para mejorar la uniformidad general
   dentro del script.
 * media.py: aumentado el numero de version al 1.0alpha1
 * protecciones.py: corregida una falta de ortografia en un mensaje.
 * rss-py: corregido el numero de version al 1.0alpha1
 * Agregado un enlace a la base de datos con extension sqlite para facilitar su
   acceso desde algunos gestores de bases de datos.
 * Agregado el archivo "Authors" y su enlace "Autores" para dar credito a
   quienes participan en el script.


2009-02-21  GatoLoko  <GatoLoko@gmail.com>

 * antispam.py: varias modificaciones para arreglar el uso de la base de datos.
 * auxiliar.py: modificada la direccion web en la funcion gato_info_cb para que
   apunte a la pagina correcta.
 * protecciones.py: corregido un pequeño bug en la funcion anti_ctcp_cb y otro
   en anti_clonerx_cb relacionados con la modularizacion.
 
 